Added lesson activity, and rendering latex strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AccelMath</string>
     <string name="play_button">Play!</string>
+    <string name="start_quiz">Start Quiz!</string>
 </resources>
