--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AccelMath</string>
     <string name="play_button">Play!</string>
     <string name="start_quiz">Start Quiz!</string>
+    <string name="sumit">Submit</string>
 </resources>
