--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="sumit">Submit</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect.</string>
+    <string name="congratulations">Congratulations!</string>
+    <string name="finish">Finish</string>
+    <string name="you_scored">You scored</string>
+    <string name="you_earned">You have earned</string>
 </resources>
