--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="finish">Finish &amp; Save Progress</string>
     <string name="you_scored">You scored</string>
     <string name="you_earned">You have earned</string>
+    <string name="start">Start!</string>
+    <string name="progress">Progress</string>
+    <string name="settings">Settings</string>
+    <string name="url">URL</string>
+    <string name="add">Add</string>
+    <string name="select">Select</string>
+    <string name="delete">Delete</string>
 </resources>
