--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="you_earned">You have earned</string>
     <string name="title_activity_quote">QuoteActivity</string>
     <string name="get_quote">More Quotes!</string>
+    <string name="empty_quote">Empty Quote for now</string>
 </resources>
