Progress Activity COmplete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_activity_quote">QuoteActivity</string>
     <string name="get_quote">More Quotes!</string>
     <string name="empty_quote">Empty Quote for now</string>
+    <string name="reset">Reset</string>
 </resources>
