--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="title_activity_quote">QuoteActivity</string>
     <string name="get_quote">More Quotes!</string>
     <string name="empty_quote">Empty Quote for now</string>
+    <string name="quotes">QUOTES</string>
     <string name="reset">Reset</string>
 </resources>
