Add create button, add scores resetting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="quotes">QUOTES</string>
     <string name="about">ABOUT</string>
     <string name="reset">Reset</string>
+    <string name="create">Create</string>
 </resources>
